<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenreActivity">

    <TextView
        android:id="@+id/genre_list_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:text="@string/genre_list"
        android:textColor="@color/teal_700"
        android:textSize="50sp" />


    <Spinner
        android:id="@+id/genre_select_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/genre_list_text_view"
        android:layout_marginTop="40dp"
        android:entries="@array/genre_options"
        android:prompt="@string/nav_genre"
        android:spinnerMode="dialog"
        android:textAlignment="center" />

    <Button
        android:id="@+id/select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/genre_list_text_view"
        android:layout_marginStart="125dp"
        android:layout_marginTop="40dp"
        android:onClick="onClickSelect"
        android:layout_toEndOf="@id/genre_select_spinner"
        android:background="@color/teal_700"
        android:text="@string/select_button"
        android:textColor="@color/white" />


</RelativeLayout>